# agent-to-agent

./: .env.example  .gitignore  README.md  pyproject.toml  registry.py  registry_client.py  test_registry_client.py
code_review_agent/: __main__.py  agent_executor.py  auth.py  prompt.md  test_client.py
image_analyzer_agent/: __main__.py  agent_executor.py  server.py  test_client.py  test_server.py
scripts/: run_a2a_ard_agents.sh  setup_keycloak.sh
shared/: __init__.py  auth.py  client.py  server.py
translation_agent/: __main__.py  agent_executor.py  server.py  test_client.py
uppercase_agent/: __main__.py  agent_executor.py  server.py  test_client.py
