[project]
name = "agent-to-agent"
version = "0.1.0"
description = "A2A code review agent with a curated registry and an LLM router client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=1.1.0",
    "openai>=2.45.0",
    "pyjwt[crypto]>=2.8",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
